public class EmergencyType{
    //Constants

    public static final String medicalEmergency = "MedicalEmergency";
    public static final String policeEmergency = "PoliceEmergency";    //
    public static final String fireEmergency = "FireEmergency";
    public static final String trafficEmergency = "TrafficEmergency";
    public static final String rescueEmergency = "RescueEmergency";



    private EmergencyType (){

    }

}
