public class PriorityType {
    //Constants

    public static final String CRITICAL = "Critical";
    public static final String HIGH = "High";
    public static final String MEDIUM = "Medium";
    public static final String LOW = "Low";


    private PriorityType() {

    }


}
