public class UnitAvailability {


        public static final String AVAILABLE = "Available";
        public static final String DISPATCHED = "Dispatched";
        public static final String BUSY = "Busy";
        public static final String UNAVAILBLE ="Unavailable";



        private UnitAvailability() {

        }

    }



