public class UnitType {
    public static final String AMBULANCE = "Ambulance";
    public static final String FIRETRUCK = "FireTruck";
    public static final String POLICECAR = "PoliceCAR";
    public static final String RESCUEHELI = "RescueHeli";


    private UnitType() {

    }

}
